force-app/main/default/objects/Activity/fields/Call_ACM_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_ACM_Notes__c</fullName>
    <label>ACM Notes</label>
    <type>TextArea</type>
    <inlineHelpText>Additional notes from the ACM — for anything not automatically captured by Demodesk.</inlineHelpText>
</CustomField>