force-app/main/default/objects/Activity/fields/Call_Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Call_Customer_Sentiment__c</fullName>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <inlineHelpText>Customer sentiment during the call. Auto-populated by Demodesk CRM Concierge.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>