force-app/main/default/objects/Activity/fields/Call_Key_Summary__c.field-meta.xml
<CustomField>
    <fullName>Call_Key_Summary__c</fullName>
    <label>Call Key Summary</label>
    <type>TextArea</type>
    <inlineHelpText>Key summary of the call. Auto-populated by Demodesk CRM Concierge.</inlineHelpText>
</CustomField>