force-app/main/default/objects/Activity/fields/Call_Outcome_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome_Next_Steps__c</fullName>
    <label>Outcome &amp; Next Steps</label>
    <type>TextArea</type>
    <inlineHelpText>Call outcome and agreed next steps. Auto-populated by Demodesk CRM Concierge.</inlineHelpText>
</CustomField>