force-app/main/default/objects/Activity/fields/Call_Participants__c.field-meta.xml
<CustomField>
    <fullName>Call_Participants__c</fullName>
    <label>Call Participants</label>
    <type>TextArea</type>
    <inlineHelpText>List of participants on the call. Auto-populated by Demodesk CRM Concierge.</inlineHelpText>
</CustomField>