force-app/main/default/objects/Activity/fields/Onboarding_Phase__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Phase__c</fullName>
    <label>Onboarding Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Phase</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>