force-app/main/default/objects/Activity/fields/Onboarding_Touchpoint_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Touchpoint_Type__c</fullName>
    <label>Onboarding Touchpoint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad-hoc Call</fullName>
                <default>true</default>
                <label>Ad-hoc Call</label>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Additional Meeting</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>